@@ -20,6 +20,7 @@ xymon (4.3.28) stable; urgency=medium
      ranges are present (Reported by Erik D. Schminke)
    * The size limit of message data passed to SCRIPT alerts is
      configurable with the MAXMSG_ALERTSCRIPT variable.
+   * Summary messages should work again (Thanks, Axel)
 
  -- Japheth Cleaver <cleaver-xymon@terabithia.org>  Thu, XX XXX 2016 15:00:00 -0700
 
