@@ -21,6 +21,7 @@ Changes from 4.3.27 -> 4.3.28 (XX XXX 2016)
   ranges are present (Reported by Erik D. Schminke)
 * The size limit of message data passed to SCRIPT alerts is 
   configurable with the MAXMSG_ALERTSCRIPT variable.
+* Summary messages should work again (Thanks, Axel)
 
 
 Changes from 4.3.26 -> 4.3.27 (24 Mar 2016)
